# Ckb-alpha-agent

./: .gitignore  CLAUDE.md  README.md  SPEC.md  ckb_publisher.py  fiber_client.py  proof_server.py  pyproject.toml
docs/: fiber-deep-dive.md
fiber-nodes/user-node/: config.yml
static/: index.html
tests/: test_alpha_brain.py
tools/: alpha_brain.py  data_fetcher.py  llm_analyst.py
